--- a/final.ipynb
+++ b/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7e4a81dd",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os, math, random, gc, time, pickle\n",
+    "import os, math, random, time, pickle\n",
     "\n",
     "from scipy.sparse import csr_matrix, coo_matrix\n",
     "from scipy.sparse.linalg import eigsh\n",
@@ -26,7 +26,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import Ridge\n",
-    "# from surprise import SVD, SVDpp, Dataset, Reader, accuracy"
+    "# from surprise import SVD, SVDpp, Dataset, Reader, accuracy\n"
    ]
   },
   {
@@ -3444,6 +3444,476 @@
    "metadata": {},
    "source": [
     "### **B. SVD (best model with best params) Content-Based**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d99c0dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hybrid_predict(user_id, movie_ids, user_idx, movie_idx_list, cb_profiles, cb_descriptions, funk_model, rating_min=0.5,  rating_max=5.0, alpha=0.5):\n",
+    "    # Content-Based: predict bằng Ridge từ userId, movieId\n",
+    "    pred_cb = predict_rating_ridge(user_id, movie_ids, cb_profiles, cb_descriptions, normalize_rating=False)\n",
+    "    if len(pred_cb) == 0:\n",
+    "        return np.array([])\n",
+    "\n",
+    "    # Collaborative: predict bằng FunkSVD từ user_idx, movie_idx\n",
+    "    pred_cf = []\n",
+    "    for m_idx in movie_idx_list:\n",
+    "        if m_idx >= 0:\n",
+    "            pred = funk_model.predict(user_idx, m_idx)\n",
+    "        else:\n",
+    "            pred = rating_min  # fallback\n",
+    "        pred_cf.append(pred)\n",
+    "\n",
+    "    # Kết hợp hybrid\n",
+    "    pred_cb = np.clip(pred_cb, rating_min, rating_max)\n",
+    "    pred_cf = np.clip(pred_cf, rating_min, rating_max)\n",
+    "\n",
+    "    pred_hybrid = alpha * pred_cb + (1 - alpha) * np.array(pred_cf)\n",
+    "    return np.clip(pred_hybrid, rating_min, rating_max)\n",
+    "\n",
+    "\n",
+    "# Đánh giá RMSE / MAE cho hybrid model\n",
+    "def evaluate_hybrid(ratings_df, cb_profiles, cb_descriptions, funk_model, alpha=0.5, name=\"Val\"):\n",
+    "    y_true, y_pred = [], []\n",
+    "    for uid in tqdm(ratings_df['userId'].unique(), desc=f\"[{name} α={alpha:.2f}]\"):\n",
+    "        user_df = ratings_df[ratings_df['userId'] == uid]\n",
+    "        movie_ids = user_df['movieId'].values\n",
+    "        true_ratings = user_df['rating'].values\n",
+    "        user_idx = user_df['user_idx'].iloc[0]\n",
+    "        movie_idx_list = user_df['movie_idx'].values\n",
+    "\n",
+    "        pred = hybrid_predict(uid, movie_ids, user_idx, movie_idx_list, cb_profiles, cb_descriptions, funk_model, alpha=alpha)\n",
+    "\n",
+    "        if len(pred) == len(true_ratings):\n",
+    "            y_true.extend(true_ratings)\n",
+    "            y_pred.extend(pred)\n",
+    "\n",
+    "    if len(y_true) == 0:\n",
+    "        return np.nan, np.nan\n",
+    "\n",
+    "    return np.sqrt(mean_squared_error(y_true, y_pred)), mean_absolute_error(y_true, y_pred)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b87f1f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.11/dist-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator Ridge from version 1.5.0 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "funksvd_model = SurpriseFunkSVD().load(\"best_model_funksvd.pkl\")\n",
+    "cb_profiles = load_profiles(\"entropy_ridge\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "425899ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genome_csr = load_genome_csr()\n",
+    "\n",
+    "# Biến cb_descriptions dùng cho Ridge Regression\n",
+    "cb_descriptions = pd.DataFrame(\n",
+    "    data=genome_csr.toarray(),\n",
+    "    index=describe_matrix.index\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd5318ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.50]: 100%|██████████| 162541/162541 [10:29<00:00, 258.15it/s]\n",
+      "[Test α=0.50]: 100%|██████████| 162541/162541 [11:18<00:00, 239.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Baseline α=0.5] Val RMSE: 0.7615 | MAE: 0.5758 || Test RMSE: 0.7610 | MAE: 0.5755\n"
+     ]
+    }
+   ],
+   "source": [
+    "alphas = np.arange(0.0, 1.1, 0.1)\n",
+    "results = []\n",
+    "\n",
+    "# 1. Baseline: alpha = 0.5\n",
+    "alpha_baseline = 0.5\n",
+    "rmse_val_base, mae_val_base = evaluate_hybrid(val_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha_baseline, name=\"Val\")\n",
+    "rmse_test_base, mae_test_base = evaluate_hybrid(test_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha_baseline, name=\"Test\")\n",
+    "\n",
+    "print(f\"[Baseline α={alpha_baseline:.1f}] Val RMSE: {rmse_val_base:.4f} | MAE: {mae_val_base:.4f} || Test RMSE: {rmse_test_base:.4f} | MAE: {mae_test_base:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45076d6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.00]: 100%|██████████| 162541/162541 [10:43<00:00, 252.71it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.0] Val RMSE: 0.7731 | MAE: 0.5825\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.10]: 100%|██████████| 162541/162541 [10:48<00:00, 250.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.1] Val RMSE: 0.7675 | MAE: 0.5788\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.20]: 100%|██████████| 162541/162541 [10:29<00:00, 258.23it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.2] Val RMSE: 0.7635 | MAE: 0.5763\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.30]: 100%|██████████| 162541/162541 [10:39<00:00, 254.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.3] Val RMSE: 0.7612 | MAE: 0.5749\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.40]: 100%|██████████| 162541/162541 [10:36<00:00, 255.48it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.4] Val RMSE: 0.7605 | MAE: 0.5748\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.50]: 100%|██████████| 162541/162541 [10:42<00:00, 253.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.5] Val RMSE: 0.7615 | MAE: 0.5758\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.60]: 100%|██████████| 162541/162541 [10:44<00:00, 252.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.6] Val RMSE: 0.7641 | MAE: 0.5780\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.70]: 100%|██████████| 162541/162541 [10:42<00:00, 252.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.7] Val RMSE: 0.7683 | MAE: 0.5815\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.80]: 100%|██████████| 162541/162541 [10:43<00:00, 252.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.8] Val RMSE: 0.7742 | MAE: 0.5861\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=0.90]: 100%|██████████| 162541/162541 [10:34<00:00, 256.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=0.9] Val RMSE: 0.7816 | MAE: 0.5918\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Val α=1.00]: 100%|██████████| 162541/162541 [10:22<00:00, 261.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[GridSearch α=1.0] Val RMSE: 0.7906 | MAE: 0.5986\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Grid search alpha trên val\n",
+    "for alpha in alphas:\n",
+    "    rmse_val, mae_val = evaluate_hybrid(val_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha)\n",
+    "    results.append({\n",
+    "        \"alpha\": alpha,\n",
+    "        \"val_rmse\": rmse_val,\n",
+    "        \"val_mae\": mae_val\n",
+    "    })\n",
+    "    print(f\"[GridSearch α={alpha:.1f}] Val RMSE: {rmse_val:.4f} | MAE: {mae_val:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7510abcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Test α=0.40]: 100%|██████████| 162541/162541 [11:27<00:00, 236.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Final Test α=0.40] Test RMSE: 0.7600 | MAE: 0.5744\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Tìm best alpha dựa trên val RMSE\n",
+    "df_results = pd.DataFrame(results)\n",
+    "best_alpha = df_results.loc[df_results['val_rmse'].idxmin(), 'alpha']\n",
+    "\n",
+    "rmse_test_best, mae_test_best = evaluate_hybrid(test_df, cb_profiles, cb_descriptions, funksvd_model, alpha=best_alpha, name=\"Test\")\n",
+    "print(f\"[Final Test α={best_alpha:.2f}] Test RMSE: {rmse_test_best:.4f} | MAE: {mae_test_best:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e2e0ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hybrid_topk_for_user(user_id, ratings_df, movies_df, cb_profiles, cb_descriptions, funk_model, alpha=0.5, top_k=10):\n",
+    "    # Lấy phim đã xem\n",
+    "    seen = ratings_df[ratings_df['userId'] == user_id]['movieId'].values\n",
+    "    candidates = movies_df[~movies_df['movieId'].isin(seen)]\n",
+    "\n",
+    "    if len(candidates) == 0:\n",
+    "        return pd.DataFrame(columns=[\"movieId\", \"predicted_rating\"])\n",
+    "\n",
+    "    movie_ids = candidates['movieId'].values\n",
+    "    movie_idx_list = candidates['movie_idx'].values\n",
+    "    try:\n",
+    "        user_idx = ratings_df[ratings_df['userId'] == user_id]['user_idx'].iloc[0]\n",
+    "    except IndexError:\n",
+    "        return pd.DataFrame(columns=[\"movieId\", \"predicted_rating\"])\n",
+    "\n",
+    "    preds = hybrid_predict(user_id, movie_ids, user_idx, movie_idx_list, cb_profiles, cb_descriptions, funk_model, alpha=alpha)\n",
+    "\n",
+    "    if len(preds) == 0:\n",
+    "        return pd.DataFrame(columns=[\"movieId\", \"predicted_rating\"])\n",
+    "\n",
+    "    topk = candidates.copy()\n",
+    "    topk['predicted_rating'] = preds\n",
+    "    return topk.sort_values(by='predicted_rating', ascending=False).head(top_k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40223cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TMDB API setup\n",
+    "TMDB_API_KEY = \"2307c3e2979636e48540fc3c2c7dbaec\"\n",
+    "\n",
+    "# Lấy đường dẫn poster từ TMDB API bằng tmdb_id.\n",
+    "def fetch_poster(tmdb_id, api_key):\n",
+    "    if pd.isna(tmdb_id):\n",
+    "        return None\n",
+    "    url = f\"https://api.themoviedb.org/3/movie/{int(tmdb_id)}?api_key={api_key}\"\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            poster_path = data.get(\"poster_path\")\n",
+    "            if poster_path:\n",
+    "                return f\"https://image.tmdb.org/t/p/w200{poster_path}\"\n",
+    "    except:\n",
+    "        pass\n",
+    "    return None\n",
+    "\n",
+    "# Thêm cột 'poster_url' vào DataFrame dựa trên movieId và links.csv.\n",
+    "def add_poster_column(df, links_df, api_key):\n",
+    "    df = df.merge(links_df[['movieId', 'tmdbId']], on='movieId', how='left')\n",
+    "    df['poster_url'] = df['tmdbId'].apply(lambda x: fetch_poster(x, api_key))\n",
+    "    return df.drop(columns=['tmdbId'])\n",
+    "\n",
+    "# Hiển thị poster\n",
+    "def display_with_posters(df):\n",
+    "    html = \"<table><tr><th>Movie ID</th><th>Title</th><th>Genres</th><th>Predicted Rating</th><th>Poster</th></tr>\"\n",
+    "    for _, row in df.iterrows():\n",
+    "        poster_img = (\n",
+    "            f\"<img src='{row['poster_url']}' width='200' height='280'>\" \n",
+    "            if row['poster_url'] else \"N/A\"\n",
+    "        )\n",
+    "        html += (\n",
+    "            f\"<tr>\"\n",
+    "            f\"<td>{row['movieId']}</td>\"\n",
+    "            f\"<td>{row['title']}</td>\"\n",
+    "            f\"<td>{row['genres']}</td>\"\n",
+    "            f\"<td>{row['predicted_rating']:.2f}</td>\"\n",
+    "            f\"<td>{poster_img}</td>\"\n",
+    "            f\"</tr>\"\n",
+    "        )\n",
+    "    html += \"</table>\"\n",
+    "    return HTML(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58bf2766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gộp movie_idx từ cả 3 tập\n",
+    "movie_idx_map = pd.concat([train_df, val_df, test_df])[['movieId', 'movie_idx']].drop_duplicates()\n",
+    "movies_df = movies.merge(movie_idx_map, on='movieId', how='left')\n",
+    "topk_df['movieId'] = topk_df['movieId'].astype(int)\n",
+    "links['movieId'] = links['movieId'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "159bae63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id = 95133  # ID người dùng bạn muốn gợi ý\n",
+    "topk_df = hybrid_topk_for_user(\n",
+    "    user_id=user_id,\n",
+    "    ratings_df=val_df,\n",
+    "    movies_df=movies_df,\n",
+    "    cb_profiles=cb_profiles,\n",
+    "    cb_descriptions=cb_descriptions,\n",
+    "    funk_model=funksvd_model,\n",
+    "    alpha=0.4,\n",
+    "    top_k=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55cbab01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr><th>Movie ID</th><th>Title</th><th>Genres</th><th>Predicted Rating</th><th>Poster</th></tr><tr><td>2324</td><td>Life Is Beautiful (La Vita è bella) (1997)</td><td>Comedy|Drama|Romance|War</td><td>4.64</td><td><img src='https://image.tmdb.org/t/p/w200/74hLDKjD5aGYOotO6esUVaeISa2.jpg' width='200' height='280'></td></tr><tr><td>318</td><td>Shawshank Redemption, The (1994)</td><td>Crime|Drama</td><td>4.51</td><td><img src='https://image.tmdb.org/t/p/w200/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg' width='200' height='280'></td></tr><tr><td>120807</td><td>John Mulaney: New In Town (2012)</td><td>Comedy</td><td>4.49</td><td><img src='https://image.tmdb.org/t/p/w200/ufE8KAkLQT9u91AgDSc5Oxa3DjW.jpg' width='200' height='280'></td></tr><tr><td>2858</td><td>American Beauty (1999)</td><td>Drama|Romance</td><td>4.46</td><td><img src='https://image.tmdb.org/t/p/w200/wby9315QzVKdW9BonAefg8jGTTb.jpg' width='200' height='280'></td></tr><tr><td>134853</td><td>Inside Out (2015)</td><td>Adventure|Animation|Children|Comedy|Drama|Fantasy</td><td>4.40</td><td><img src='https://image.tmdb.org/t/p/w200/2H1TmgdfNtsKlU9jKdeNyYL5y8T.jpg' width='200' height='280'></td></tr><tr><td>65188</td><td>Dear Zachary: A Letter to a Son About His Father (2008)</td><td>Documentary</td><td>4.40</td><td><img src='https://image.tmdb.org/t/p/w200/bVJCQfIfNC01CYOVkvBOtrY1cxy.jpg' width='200' height='280'></td></tr><tr><td>163134</td><td>Your Name. (2016)</td><td>Animation|Drama|Fantasy|Romance</td><td>4.40</td><td><img src='https://image.tmdb.org/t/p/w200/8GJsy7w7frGquw1cy9jasOGNNI1.jpg' width='200' height='280'></td></tr><tr><td>1704</td><td>Good Will Hunting (1997)</td><td>Drama|Romance</td><td>4.39</td><td><img src='https://image.tmdb.org/t/p/w200/z2FnLKpFi1HPO7BEJxdkv6hpJSU.jpg' width='200' height='280'></td></tr><tr><td>527</td><td>Schindler's List (1993)</td><td>Drama|War</td><td>4.35</td><td><img src='https://image.tmdb.org/t/p/w200/sF1U4EUQS8YHUYjNl3pMGNIQyr0.jpg' width='200' height='280'></td></tr><tr><td>60069</td><td>WALL·E (2008)</td><td>Adventure|Animation|Children|Romance|Sci-Fi</td><td>4.34</td><td><img src='https://image.tmdb.org/t/p/w200/hbhFnRzzg6ZDmm8YAmxBnQpQIPh.jpg' width='200' height='280'></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "topk_df = add_poster_column(topk_df, links, TMDB_API_KEY)\n",
+    "display_with_posters(topk_df)\n"
    ]
   }
  ],
