--- a/final.ipynb
+++ b/final.ipynb
@@ -40,7 +40,7 @@
     "np.random.seed(SEED)\n",
     "random.seed(SEED)\n",
     "\n",
-    "DATA_DIR = \"../data\"\n",
+    "DATA_DIR = \"data\"\n",
     "Z_THRESHOLD = 0.0   # z-score >= 0 => user \"thích\" phim\n",
     "RATING_MIN, RATING_MAX = 0.5, 5.0\n",
     "TEST_SIZE, VAL_SIZE = 0.10, 0.10\n",
