--- a/final.ipynb
+++ b/final.ipynb
@@ -12,6 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os, math, random, time, pickle\n",
+    "import itertools\n",
+    "import gc\n",
     "\n",
     "from scipy.sparse import csr_matrix, coo_matrix\n",
     "from scipy.sparse.linalg import eigsh\n",
@@ -26,7 +28,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import Ridge\n",
-    "# from surprise import SVD, SVDpp, Dataset, Reader, accuracy\n"
+    "from surprise import SVD, SVDpp, Dataset, Reader, accuracy\n"
    ]
   },
   {
@@ -1197,7 +1199,7 @@
     "        self.verbose   = verbose\n",
     "        self.train_rmse, self.val_rmse = [], []\n",
     "\n",
-    "    # ───── Train ─────\n",
+    "    # Train \n",
     "    def fit(self, train_df, val_df=None, patience: int = 3):\n",
     "        u_tr, i_tr, r_tr = df_to_numpy(train_df)\n",
     "        if val_df is not None:\n",
@@ -1256,7 +1258,7 @@
     "\n",
     "        return self\n",
     "\n",
-    "    # ───── Inference ─────\n",
+    "    # Inference\n",
     "    def predict(self, u_idx: int, i_idx: int) -> float:\n",
     "        est = (\n",
     "            self.mu\n",
@@ -1273,7 +1275,7 @@
     "            0.5, 5.0,\n",
     "        )\n",
     "\n",
-    "    # ───── Save / Load ─────\n",
+    "    # Save / Load\n",
     "    def save(self, file_path: str):\n",
     "        \"\"\"\n",
     "        Lưu mô hình ra file .npz. \n",
@@ -1468,13 +1470,15 @@
     "                         n_epochs=n_epochs, verbose=verbose)\n",
     "        self.rating_scale = rating_scale\n",
     "\n",
+    "    # Train\n",
     "    def fit(self, train_df):\n",
     "        reader = Reader(rating_scale=self.rating_scale)\n",
     "        data = Dataset.load_from_df(train_df[['user_idx', 'movie_idx', 'rating']], reader)\n",
     "        trainset = data.build_full_trainset()\n",
     "        self.model.fit(trainset)\n",
     "        return self\n",
-    "\n",
+    "    \n",
+    "    # Inference\n",
     "    def predict(self, u_idx: int, i_idx: int) -> float:\n",
     "        est = self.model.predict(uid=u_idx, iid=i_idx).est\n",
     "        return float(np.clip(est, *self.rating_scale))\n",
@@ -1490,7 +1494,8 @@
     "        predictions = self.predict_batch(df_nan[\"user_idx\"].values, df_nan[\"movie_idx\"].values)\n",
     "        df_nan[\"predicted_rating\"] = predictions\n",
     "        return df_nan\n",
-    "\n",
+    "    \n",
+    "    # Save & Load\n",
     "    def save(self, file_path: str):\n",
     "        import joblib\n",
     "        joblib.dump(self.model, file_path)\n",
@@ -1845,7 +1850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === XỬ LÝ RATINGS ===\n",
+    "# XỬ LÝ RATINGS\n",
     "# CÁC PHIM NGƯỜI DÙNG ĐÃ RATING (lấy 20 phim phổ biến nhất)\n",
     "\n",
     "implicit_feedback = defaultdict(set)\n",
@@ -1901,7 +1906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === XỬ LÝ FILE TAGS ===\n",
+    "# XỬ LÝ FILE TAGS\n",
     "\n",
     "# Giữ lại các dòng tag có userId và movieId tồn tại trong encoder (tức là đã xuất hiện trong dữ liệu train)\n",
     "tags_filtered = tags[\n",
@@ -2409,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b0a890d",
    "metadata": {},
    "outputs": [
@@ -2426,7 +2431,7 @@
     }
    ],
    "source": [
-    "# ======= Khởi tạo và huấn luyện mô hình =======\n",
+    "# Khởi tạo và huấn luyện mô hình\n",
     "model_svdpp_sur = SVDpp(n_epochs=30, n_factors=50)\n",
     "model_svdpp_sur.fit(trainset)"
    ]
@@ -2461,7 +2466,7 @@
     }
    ],
    "source": [
-    "# ======= Đánh giá trên tập train, validation và test =======\n",
+    "# Đánh giá trên tập train, validation và test\n",
     "train_predictions = model_svdpp_sur.test(trainset.build_testset()[:10000])\n",
     "val_predictions = model_svdpp_sur.test(valset)\n",
     "test_predictions = model_svdpp_sur.test(testset)\n",
@@ -2478,7 +2483,7 @@
    "id": "27a93d56",
    "metadata": {},
    "source": [
-    "### **Tìm best params cho best model**"
+    "## **Tìm best params cho best model**"
    ]
   },
   {
@@ -2534,16 +2539,12 @@
     }
    ],
    "source": [
-    "import itertools\n",
-    "import gc\n",
-    "import pandas as pd\n",
-    "\n",
     "results = []\n",
     "best_rmse = float('inf')\n",
     "best_model = None\n",
     "best_params = None\n",
     "\n",
-    "# Lưới tham số bạn muốn thử\n",
+    "# Các tham số muốn thử\n",
     "param_grid = {\n",
     "    'n_factors': [50, 100],\n",
     "    'lr_all': [0.005, 0.007, 0.01],\n",
@@ -2842,12 +2843,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3f690b86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# chỉnh lại index giống nhau khi gộp 2 ma trận\n",
+    "# Chỉnh lại index giống nhau khi gộp 2 ma trận\n",
     "genome_matrix = genome_matrix.loc[all_movies]\n",
     "genres_df = genres_df.loc[all_movies]"
    ]
@@ -3443,7 +3444,7 @@
    "id": "624f13bb",
    "metadata": {},
    "source": [
-    "### **B. SVD (best model with best params) Content-Based**"
+    "### **B. FunkSVD (best model with best params) + Content-Based**"
    ]
   },
   {
@@ -3562,7 +3563,7 @@
     "alphas = np.arange(0.0, 1.1, 0.1)\n",
     "results = []\n",
     "\n",
-    "# 1. Baseline: alpha = 0.5\n",
+    "# Baseline: alpha = 0.5\n",
     "alpha_baseline = 0.5\n",
     "rmse_val_base, mae_val_base = evaluate_hybrid(val_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha_baseline, name=\"Val\")\n",
     "rmse_test_base, mae_test_base = evaluate_hybrid(test_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha_baseline, name=\"Test\")\n",
@@ -3732,7 +3733,7 @@
     }
    ],
    "source": [
-    "# 2. Grid search alpha trên val\n",
+    "# Grid search alpha trên val\n",
     "for alpha in alphas:\n",
     "    rmse_val, mae_val = evaluate_hybrid(val_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha)\n",
     "    results.append({\n",
@@ -3765,7 +3766,7 @@
     }
    ],
    "source": [
-    "# 3. Tìm best alpha dựa trên val RMSE\n",
+    "# Tìm best alpha dựa trên val RMSE\n",
     "df_results = pd.DataFrame(results)\n",
     "best_alpha = df_results.loc[df_results['val_rmse'].idxmin(), 'alpha']\n",
     "\n",
@@ -3808,68 +3809,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40223cb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TMDB API setup\n",
-    "TMDB_API_KEY = \"2307c3e2979636e48540fc3c2c7dbaec\"\n",
-    "\n",
-    "# Lấy đường dẫn poster từ TMDB API bằng tmdb_id.\n",
-    "def fetch_poster(tmdb_id, api_key):\n",
-    "    if pd.isna(tmdb_id):\n",
-    "        return None\n",
-    "    url = f\"https://api.themoviedb.org/3/movie/{int(tmdb_id)}?api_key={api_key}\"\n",
-    "    try:\n",
-    "        response = requests.get(url)\n",
-    "        if response.status_code == 200:\n",
-    "            data = response.json()\n",
-    "            poster_path = data.get(\"poster_path\")\n",
-    "            if poster_path:\n",
-    "                return f\"https://image.tmdb.org/t/p/w200{poster_path}\"\n",
-    "    except:\n",
-    "        pass\n",
-    "    return None\n",
-    "\n",
-    "# Thêm cột 'poster_url' vào DataFrame dựa trên movieId và links.csv.\n",
-    "def add_poster_column(df, links_df, api_key):\n",
-    "    df = df.merge(links_df[['movieId', 'tmdbId']], on='movieId', how='left')\n",
-    "    df['poster_url'] = df['tmdbId'].apply(lambda x: fetch_poster(x, api_key))\n",
-    "    return df.drop(columns=['tmdbId'])\n",
-    "\n",
-    "# Hiển thị poster\n",
-    "def display_with_posters(df):\n",
-    "    html = \"<table><tr><th>Movie ID</th><th>Title</th><th>Genres</th><th>Predicted Rating</th><th>Poster</th></tr>\"\n",
-    "    for _, row in df.iterrows():\n",
-    "        poster_img = (\n",
-    "            f\"<img src='{row['poster_url']}' width='200' height='280'>\" \n",
-    "            if row['poster_url'] else \"N/A\"\n",
-    "        )\n",
-    "        html += (\n",
-    "            f\"<tr>\"\n",
-    "            f\"<td>{row['movieId']}</td>\"\n",
-    "            f\"<td>{row['title']}</td>\"\n",
-    "            f\"<td>{row['genres']}</td>\"\n",
-    "            f\"<td>{row['predicted_rating']:.2f}</td>\"\n",
-    "            f\"<td>{poster_img}</td>\"\n",
-    "            f\"</tr>\"\n",
-    "        )\n",
-    "    html += \"</table>\"\n",
-    "    return HTML(html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "58bf2766",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Gộp movie_idx từ cả 3 tập\n",
     "movie_idx_map = pd.concat([train_df, val_df, test_df])[['movieId', 'movie_idx']].drop_duplicates()\n",
-    "movies_df = movies.merge(movie_idx_map, on='movieId', how='left')\n",
-    "topk_df['movieId'] = topk_df['movieId'].astype(int)\n",
-    "links['movieId'] = links['movieId'].astype(int)"
+    "movies_df = movies.merge(movie_idx_map, on='movieId', how='left')\n"
    ]
   },
   {
@@ -3879,17 +3825,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_id = 95133  # ID người dùng bạn muốn gợi ý\n",
     "topk_df = hybrid_topk_for_user(\n",
-    "    user_id=user_id,\n",
+    "    user_id=USER_ID,\n",
     "    ratings_df=val_df,\n",
     "    movies_df=movies_df,\n",
     "    cb_profiles=cb_profiles,\n",
     "    cb_descriptions=cb_descriptions,\n",
     "    funk_model=funksvd_model,\n",
-    "    alpha=0.4,\n",
+    "    alpha=best_alpha,\n",
     "    top_k=10\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e167339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topk_df['movieId'] = topk_df['movieId'].astype(int)\n",
+    "links['movieId'] = links['movieId'].astype(int)"
    ]
   },
   {
