--- a/final.ipynb
+++ b/final.ipynb
@@ -56,7 +56,7 @@
    "id": "cdbac538",
    "metadata": {},
    "source": [
-    "# Load data"
+    "# **Load data**"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "id": "fbef87c9",
    "metadata": {},
    "source": [
-    "# Phân tích khám phá dữ liệu (EDA)"
+    "# **Exploratory Data Analysis**"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "id": "0f82bd8b",
    "metadata": {},
    "source": [
-    "**Biểu đồ tần suất theo điểm đánh giá**"
+    "## **Biểu đồ tần suất theo ratings**"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "id": "94fb87cb",
    "metadata": {},
    "source": [
-    "## Phân tích theo phim"
+    "## **Phân tích theo phim**"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "id": "06f97448",
    "metadata": {},
    "source": [
-    "## Phân tích theo thể loại"
+    "## **Phân tích theo thể loại**"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "id": "14687099",
    "metadata": {},
    "source": [
-    "## Phân tích theo thời gian"
+    "## **Phân tích theo thời gian**"
    ]
   },
   {
@@ -596,7 +596,7 @@
    "id": "d2879566",
    "metadata": {},
    "source": [
-    "# Pre-processing & Preparation"
+    "# **Pre-processing & Preparation**"
    ]
   },
   {
@@ -642,7 +642,7 @@
    "id": "fef4896e",
    "metadata": {},
    "source": [
-    "## Mã hóa"
+    "## **Encode** "
    ]
   },
   {
@@ -670,7 +670,7 @@
    "id": "d195c5da",
    "metadata": {},
    "source": [
-    "## Chia dữ liệu để huấn luyện và kiểm tra"
+    "## **Split data**"
    ]
   },
   {
@@ -714,7 +714,7 @@
    "id": "eabb9bb2",
    "metadata": {},
    "source": [
-    "# Thuật toán Truncated SVD"
+    "# **Truncated SVD algorithm**"
    ]
   },
   {
@@ -722,7 +722,7 @@
    "id": "2ddf832e",
    "metadata": {},
    "source": [
-    "## 1. Cài đặt thuật toán"
+    "## **1. Algorithm Implementation**"
    ]
   },
   {
@@ -863,7 +863,7 @@
    "id": "60c80b42",
    "metadata": {},
    "source": [
-    "## 2. Áp dụng thuật toán"
+    "## **2. Algorithm Application**"
    ]
   },
   {
@@ -887,7 +887,7 @@
    "id": "5ce0fba6",
    "metadata": {},
    "source": [
-    "## 3. Đánh giá"
+    "## **3. Performance Evaluation**"
    ]
   },
   {
@@ -948,7 +948,7 @@
    "id": "a8ac2fba",
    "metadata": {},
    "source": [
-    "## 4. Gợi ý phim"
+    "## **4. Movie Recommendations**"
    ]
   },
   {
@@ -1073,7 +1073,7 @@
    "id": "35c3bf4e",
    "metadata": {},
    "source": [
-    "# Các thuật toán advanced SVD"
+    "# **Advanced SVD Algorithms**"
    ]
   },
   {
@@ -1081,7 +1081,7 @@
    "id": "616932df",
    "metadata": {},
    "source": [
-    "## **Thuật toán FunkSVD**"
+    "## **FunkSVD Algorithm**"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
    "id": "2541c4dc",
    "metadata": {},
    "source": [
-    "### ***1. Thuật toán***"
+    "### ***1. Algorithm***"
    ]
   },
   {
@@ -1134,7 +1134,7 @@
    "id": "81546c93",
    "metadata": {},
    "source": [
-    "### ***2. Xây dựng model bằng hai cách***"
+    "### ***2. Building the model in 2 methods***"
    ]
   },
   {
@@ -1142,7 +1142,7 @@
    "id": "603e6f97",
    "metadata": {},
    "source": [
-    "#### *Cách 1. Sử dụng mô hình implement*"
+    "#### ***Method 1. Using a custom implementation***"
    ]
   },
   {
@@ -1446,7 +1446,7 @@
    "id": "46dd62ce",
    "metadata": {},
    "source": [
-    "#### *Cách 2. Sử dụng mô hình từ thư viện Surprise*"
+    "#### ***Method 2. Using the built-in model from the Surprise library***"
    ]
   },
   {
@@ -1651,7 +1651,7 @@
    "id": "4da8c470",
    "metadata": {},
    "source": [
-    "## **Thuật toán SVD++**"
+    "## **Algorithm SVD++**"
    ]
   },
   {
@@ -1659,7 +1659,7 @@
    "id": "368d950e",
    "metadata": {},
    "source": [
-    "### ***1. Thuật toán***"
+    "### ***1. Algorithm***"
    ]
   },
   {
@@ -1667,7 +1667,7 @@
    "id": "7656c8fd",
    "metadata": {},
    "source": [
-    "#### **a. Công thức dự đoán rating và ý tưởng**\n",
+    "#### **a. Rating prediction formula**\n",
     "\n",
     "Giả sử $R_{n \\times m}$ là ma trận đánh giá gồm $n$ người dùng và $m$ mặt hàng. Mỗi phần tử $r_{ui}$ là đánh giá của người dùng $u$ cho mặt hàng $i$.\n",
     "\n",
@@ -1688,7 +1688,7 @@
     "Ý tưởng của SVD++ là kết hợp **cả thông tin explicit (rating)** và **implicit feedback (dạng hành vi như gắn tag, click, xem phim, v.v.)** để cải thiện độ chính xác khi dự đoán.\n",
     "\n",
     "\n",
-    "#### **b. Hàm mất mát (Loss function)**\n",
+    "#### **b. Loss function**\n",
     "\n",
     "Hàm mất mát của mô hình SVD++ được định nghĩa như sau:\n",
     "\n",
@@ -1709,7 +1709,7 @@
     "Regularization giúp giảm **overfitting**, nhất là khi dữ liệu đánh giá bị **thưa** (sparse). Nó hạn chế mô hình \"học thuộc\" toàn bộ dữ liệu train và giúp tổng quát hóa tốt hơn trên tập validation.\n",
     "\n",
     "\n",
-    "#### **c. Quy tắc cập nhật tham số bằng SGD**\n",
+    "#### **c. Stochastic gradient descent (SGD) parameter update rule**\n",
     "\n",
     "Với mỗi mini-batch, chọn ngẫu nhiên các mẫu và cập nhật các tham số $b_u, b_i, p_u, q_i, y_j$ dựa trên sai số $e_{ui} = r_{ui} - \\hat{r}_{ui}$ theo các công thức sau:\n",
     "\n",
@@ -1747,7 +1747,7 @@
    "id": "74e30b83",
    "metadata": {},
    "source": [
-    "### ***2. Xây dựng model bằng hai cách***"
+    "### ***2. Building the model in 2 methods***"
    ]
   },
   {
@@ -1755,7 +1755,7 @@
    "id": "ecab0864",
    "metadata": {},
    "source": [
-    "#### *Cách 1. Sử dụng mô hình implement*"
+    "#### ***Method 1. Using a custom implementation***"
    ]
   },
   {
@@ -1763,7 +1763,7 @@
    "id": "b224a7ee",
    "metadata": {},
    "source": [
-    "##### **1.1. Tạo data train/test/eval**"
+    "##### **1.1. Split data to train/test/eval**"
    ]
   },
   {
@@ -1932,7 +1932,7 @@
    "id": "fc169a17",
    "metadata": {},
    "source": [
-    "##### **1.2. Xây dựng mô hình**"
+    "##### **1.2. Model building**"
    ]
   },
   {
@@ -2332,7 +2332,7 @@
    "id": "d411b301",
    "metadata": {},
    "source": [
-    "#### *Cách 2. Sử dụng mô hình từ thư viện Surprise*"
+    "#### ***Method 2. Using the built-in model from the Surprise library***"
    ]
   },
   {
@@ -2340,7 +2340,7 @@
    "id": "ab40f8cc",
    "metadata": {},
    "source": [
-    "##### **2.1. Xử lí data train**"
+    "##### **2.1. Processing data train**"
    ]
   },
   {
@@ -2409,7 +2409,7 @@
    "id": "b1ba915e",
    "metadata": {},
    "source": [
-    "##### **2.2. Xây dựng mô hình**"
+    "##### **2.2. Model building**"
    ]
   },
   {
@@ -2483,7 +2483,21 @@
    "id": "27a93d56",
    "metadata": {},
    "source": [
-    "## **Tìm best params cho best model**"
+    "## **Find best hyperparameters for best model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45352786",
+   "metadata": {},
+   "source": [
+    "SVD++ là một mô hình cải tiến khi tận dụng cả đánh giá explicit và implicit, tuy nhiên sau quá trình đánh giá thực nghiệm:\n",
+    "\n",
+    "+ Hiệu suất đánh giá (RMSE): FunkSVD đạt kết quả gần tương đương SVD++ (chênh lệch nhỏ, không đáng kể).\n",
+    "\n",
+    "+ Tốc độ huấn luyện: FunkSVD huấn luyện nhanh hơn rất nhiều do cấu trúc đơn giản hơn và không cần tính toán các vector cộng dồn từ implicit feedback như SVD++.\n",
+    "\n",
+    "Vì vậy, FunkSVD dùng thư viện được chọn làm mô hình chính để tiếp tục tối ưu và kết hợp với các hướng tiếp cận khác (như content-based, hybrid) vì nó cung cấp sự cân bằng tốt giữa hiệu quả mô hình và chi phí tính toán."
    ]
   },
   {
@@ -2644,7 +2658,7 @@
    "id": "c116e983",
    "metadata": {},
    "source": [
-    "#### 1. Save/Load "
+    "#### **1. Save/Load**"
    ]
   },
   {
@@ -2700,7 +2714,7 @@
    "id": "e841eb69",
    "metadata": {},
    "source": [
-    "#### 2. Per‑user z‑score (remove bias)"
+    "#### **2. Per‑user z‑score (remove bias)**"
    ]
   },
   {
@@ -2769,7 +2783,7 @@
    "id": "83b6e91c",
    "metadata": {},
    "source": [
-    "#### 3. Build genome CSR matrix"
+    "#### **3. Build genome CSR matrix**"
    ]
   },
   {
@@ -2791,7 +2805,7 @@
    "id": "f6646e54",
    "metadata": {},
    "source": [
-    "#### 4. Genres Vectorization (TF-IDF)"
+    "#### **4. Genres Vectorization (TF-IDF)**"
    ]
   },
   {
@@ -2816,7 +2830,7 @@
    "id": "18f2b4bc",
    "metadata": {},
    "source": [
-    "#### 5. Xử lí, gộp ma trận và scale"
+    "#### **5. Matrix processing, merging & scaling**"
    ]
   },
   {
@@ -2905,7 +2919,7 @@
    "id": "1cb310da",
    "metadata": {},
    "source": [
-    "#### 6. Feature Selection"
+    "#### **6. Feature Selection**"
    ]
   },
   {
@@ -3448,6 +3462,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4963c905",
+   "metadata": {},
+   "source": [
+    "#### **Building**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d99c0dfc",
@@ -3569,6 +3591,14 @@
     "rmse_test_base, mae_test_base = evaluate_hybrid(test_df, cb_profiles, cb_descriptions, funksvd_model, alpha=alpha_baseline, name=\"Test\")\n",
     "\n",
     "print(f\"[Baseline α={alpha_baseline:.1f}] Val RMSE: {rmse_val_base:.4f} | MAE: {mae_val_base:.4f} || Test RMSE: {rmse_test_base:.4f} | MAE: {mae_test_base:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec6ee37b",
+   "metadata": {},
+   "source": [
+    "#### **Grid-search alpha**"
    ]
   },
   {
@@ -3772,6 +3802,14 @@
     "\n",
     "rmse_test_best, mae_test_best = evaluate_hybrid(test_df, cb_profiles, cb_descriptions, funksvd_model, alpha=best_alpha, name=\"Test\")\n",
     "print(f\"[Final Test α={best_alpha:.2f}] Test RMSE: {rmse_test_best:.4f} | MAE: {mae_test_best:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6cb68f8",
+   "metadata": {},
+   "source": [
+    "#### **Movie Recommendations**"
    ]
   },
   {
