--- a/final.ipynb
+++ b/final.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "59ea5167",
+   "metadata": {},
+   "source": [
+    "# **BÁO CÁO ĐỒ ÁN CUỐI KỲ**\n",
+    "\n",
+    "## **ĐỀ TÀI: PHÂN TÍCH SVD TRONG HỆ THỐNG GỢI Ý**\n",
+    "\n",
+    "**Dữ liệu sử dụng**: Báo cáo này sử dụng tập dữ liệu [MovieLens 25M Dataset](https://grouplens.org/datasets/movielens/25m/), một trong những bộ dữ liệu phổ biến nhất trong lĩnh vực hệ thống gợi ý, bao gồm hơn 25 triệu lượt đánh giá được ghi lại bởi 162,541 người dùng cho 62,423 bộ phim. Dữ liệu này do GroupLens Research Group phát hành, thường được sử dụng để nghiên cứu các kỹ thuật lọc cộng tác (Collaborative Filtering) và phân rã ma trận (Matrix Factorization).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e4a81dd",
