--- a/final.ipynb
+++ b/final.ipynb
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7656c8fd",
+   "id": "fc06c66f",
    "metadata": {},
    "source": [
     "#### **a. Rating prediction formula**\n",
@@ -1697,9 +1697,14 @@
     "- $y_j$: vector phản hồi ngầm của movie $j$\n",
     "- $N(u)$: tập các movie mà người dùng $u$ đã đánh giá\n",
     "\n",
-    "Ý tưởng của SVD++ là kết hợp **cả thông tin explicit (rating)** và **implicit feedback (dạng hành vi như gắn tag, click, xem phim, v.v.)** để cải thiện độ chính xác khi dự đoán.\n",
-    "\n",
-    "\n",
+    "Ý tưởng của SVD++ là kết hợp **cả thông tin explicit (rating)** và **implicit feedback (dạng hành vi như gắn tag, click, xem phim, v.v.)** để cải thiện độ chính xác khi dự đoán."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "101bc2b3",
+   "metadata": {},
+   "source": [
     "#### **b. Loss function**\n",
     "\n",
     "Hàm mất mát của mô hình SVD++ được định nghĩa như sau:\n",
@@ -1718,9 +1723,14 @@
     "\n",
     "  - $\\lambda_2$: điều chỉnh độ lớn của vector tiềm ẩn\n",
     "\n",
-    "Regularization giúp giảm **overfitting**, nhất là khi dữ liệu đánh giá bị **thưa** (sparse). Nó hạn chế mô hình \"học thuộc\" toàn bộ dữ liệu train và giúp tổng quát hóa tốt hơn trên tập validation.\n",
-    "\n",
-    "\n",
+    "Regularization giúp giảm **overfitting**, nhất là khi dữ liệu đánh giá bị **thưa** (sparse). Nó hạn chế mô hình \"học thuộc\" toàn bộ dữ liệu train và giúp tổng quát hóa tốt hơn trên tập validation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7656c8fd",
+   "metadata": {},
+   "source": [
     "#### **c. Stochastic gradient descent (SGD) parameter update rule**\n",
     "\n",
     "Với mỗi mini-batch, chọn ngẫu nhiên các mẫu và cập nhật các tham số $b_u, b_i, p_u, q_i, y_j$ dựa trên sai số $e_{ui} = r_{ui} - \\hat{r}_{ui}$ theo các công thức sau:\n",
